--- a/environment/configuration/components/cert-manager/cert-manager-issuer-manifest.yaml
+++ b/environment/configuration/components/cert-manager/cert-manager-issuer-manifest.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: cert-manager
 spec:
   acme:
-    server: https://acme-staging-v02.api.letsencrypt.org/directory #  https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     email: "${email}"
     privateKeySecretRef:
       name: cloudflare-private-key
