argo-cd integration
Added new state repo to hold application manifests.
Use of app-of-apps pattern so that argo can pickup changes

--- a/environment/configuration/components/cluster-gateway/cluster-gateway.yaml
+++ b/environment/configuration/components/cluster-gateway/cluster-gateway.yaml
@@ -16,3 +16,6 @@ spec:
       certificateRefs:
       - kind: Secret
         name: wildcard-tls-secret
+    allowedRoutes:
+      namespaces:
+        from: All
