--- a/environment/configuration/components/cert-manager/cert-manager-issuer-manifest.yaml
+++ b/environment/configuration/components/cert-manager/cert-manager-issuer-manifest.yaml
@@ -19,4 +19,4 @@ spec:
               key: api-token
         selector:
           dnsZones:
-            - "nickisibbern.dk"
+            - "${domain}"
