--- a/infrastructure/kube/inventory/host.yaml
+++ b/infrastructure/kube/inventory/host.yaml
@@ -19,3 +19,8 @@ all:
           ansible_host: 10.0.1.121
           ansible_user: homelab
           ansible_ssh_private_key_file: ~/.ssh/homelab
+        worker_node_03:
+          node_name: worker-node-03
+          ansible_host: 10.0.1.122
+          ansible_user: homelab
+          ansible_ssh_private_key_file: ~/.ssh/homelab
